--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <script type="text/javascript" src="js/computeWeights.js"></script>
   <script type="text/javascript" src="js/getWeights.js"></script>
   <script type="text/javascript" src="js/fft.js"></script>
+  <script type="text/javascript" src="js/gammacv.min.js"></script>
+  
 
   <style type="text/css">
     @font-face {
@@ -62,7 +64,7 @@
 
   </style>
   
-  <script type="text/javascript" src="https://github.com/PeculiarVentures/GammaCV/releases/download/v0.3.6/index.min.js"></script>
+  <!-- <script type="text/javascript" src="https://github.com/PeculiarVentures/GammaCV/releases/download/v0.3.6/index.min.js"></script> -->
 
 </head>
 <body>
