--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     </div>
 
     <div id="canvasWrap" style="position:relative;display: flex;justify-content: center;">
-      <canvas id="roiCanvas" width="500" height="400" style="z-index: 2;"></canvas>
+      <canvas id="roiCanvas" width="500" height="400" style="z-index: 2;cursor: crosshair;"></canvas>
       <div id="segmentedCanvasWrap">
         <canvas id="segmentedCanvas"></canvas>
       </div>
