--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </div>
 
     <div style="display: none;">
-      min_points: <input type="number" step="1" min="1" id="min_points" value="10">
+      min_points: <input type="number" step="1" min="1" id="min_points" value="5">
     </div>
 
     <div style="display: none;">
@@ -204,7 +204,7 @@
 
     <p>Logging</p>
     <p><input type="checkbox" id="startLog" class="checkbox" checked></p>
-    <p>Interval (ms): <input type="number" min="300" id="logInterval" value="1000"></p>
+    <p>Interval (ms): <input type="number" min="300" id="logInterval" step="10" value="1000"></p>
     
     <p>
       <textarea rows="10" cols="70" class="textarea is-radiusless" placeholder="" id="logOutput"></textarea>
